--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script type="importmap">
 {
   "imports": {
+    "@google/genai": "https://aistudiocdn.com/google-genai@0.14.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/"
