feat: Improve theme persistence and logo path
Add inline script to `index.html` to persist dark mode preference across page loads.
Update logo image path in `Header.tsx` and `Footer.tsx` to use `/images/logo-bozorgi.png`.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bozorgi Group</title>
     <script>
+      // Immediately apply the theme on initial load
+      (function() {
+        const theme = localStorage.getItem('theme') || 'auto';
+        const isDark = theme === 'dark' || (theme === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches);
+        document.documentElement.classList.toggle('dark', isDark);
+      })();
+    </script>
+    <script>
       tailwind.config = {
         darkMode: 'class',
       }
