--- a/index.html
+++ b/index.html
@@ -55,52 +55,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       :root {
-        --background: 0 0% 100%;
-        --foreground: 222.2 84% 4.9%;
-        --card: 0 0% 100%;
-        --card-foreground: 222.2 84% 4.9%;
-        --popover: 0 0% 100%;
-        --popover-foreground: 222.2 84% 4.9%;
-        --primary: 38 92% 50%;
-        --primary-foreground: 48 96% 98%;
-        --secondary: 210 40% 96.1%;
-        --secondary-foreground: 222.2 47.4% 11.2%;
-        --muted: 210 40% 96.1%;
-        --muted-foreground: 215.4 16.3% 46.9%;
-        --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 210 40% 98%;
-        --border: 214.3 31.8% 91.4%;
-        --input: 214.3 31.8% 91.4%;
-        --ring: 38 92% 50%;
+        --background: 0, 0%, 100%;
+        --foreground: 222.2, 84%, 4.9%;
+        --card: 0, 0%, 100%;
+        --card-foreground: 222.2, 84%, 4.9%;
+        --popover: 0, 0%, 100%;
+        --popover-foreground: 222.2, 84%, 4.9%;
+        --primary: 38, 92%, 50%;
+        --primary-foreground: 48, 96%, 98%;
+        --secondary: 210, 40%, 96.1%;
+        --secondary-foreground: 222.2, 47.4%, 11.2%;
+        --muted: 210, 40%, 96.1%;
+        --muted-foreground: 215.4, 16.3%, 46.9%;
+        --accent: 210, 40%, 96.1%;
+        --accent-foreground: 222.2, 47.4%, 11.2%;
+        --destructive: 0, 84.2%, 60.2%;
+        --destructive-foreground: 210, 40%, 98%;
+        --border: 214.3, 31.8%, 91.4%;
+        --input: 214.3, 31.8%, 91.4%;
+        --ring: 38, 92%, 50%;
       }
  
       .dark {
-        --background: 240 10% 3.9%;
-        --foreground: 210 40% 98%;
-        --card: 240 10% 3.9%;
-        --card-foreground: 210 40% 98%;
-        --popover: 240 10% 3.9%;
-        --popover-foreground: 210 40% 98%;
-        --primary: 48 96% 59%;
-        --primary-foreground: 48 96% 98%;
-        --secondary: 217.2 32.6% 17.5%;
-        --secondary-foreground: 210 40% 98%;
-        --muted: 220 14% 10%;
-        --muted-foreground: 215 20% 65%;
-        --accent: 217.2 32.6% 17.5%;
-        --accent-foreground: 210 40% 98%;
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 210 40% 98%;
-        --border: 217.2 32.6% 17.5%;
-        --input: 217.2 32.6% 17.5%;
-        --ring: 48 96% 59%;
+        --background: 240, 10%, 3.9%;
+        --foreground: 210, 40%, 98%;
+        --card: 240, 10%, 3.9%;
+        --card-foreground: 210, 40%, 98%;
+        --popover: 240, 10%, 3.9%;
+        --popover-foreground: 210, 40%, 98%;
+        --primary: 48, 96%, 59%;
+        --primary-foreground: 48, 96%, 98%;
+        --secondary: 217.2, 32.6%, 17.5%;
+        --secondary-foreground: 210, 40%, 98%;
+        --muted: 220, 14%, 10%;
+        --muted-foreground: 215, 20%, 65%;
+        --accent: 217.2, 32.6%, 17.5%;
+        --accent-foreground: 210, 40%, 98%;
+        --destructive: 0, 62.8%, 30.6%;
+        --destructive-foreground: 210, 40%, 98%;
+        --border: 217.2, 32.6%, 17.5%;
+        --input: 217.2, 32.6%, 17.5%;
+        --ring: 48, 96%, 59%;
+      }
+
+      html {
+        scroll-padding-top: 80px; /* Height of fixed header */
       }
 
       body {
         font-family: 'Inter', sans-serif;
+        background-color: hsl(var(--background));
+        color: hsl(var(--foreground));
       }
+      
       /* Respect user preference for reduced motion */
       @media (prefers-reduced-motion: reduce) {
         *,
