feat: Enhance SEO and navigation persistence
Adds comprehensive meta tags to index.html for improved search engine visibility and social media sharing. Introduces URL parameter-based page navigation and handles browser back/forward events to maintain navigation state across sessions. Updates locale files with new SEO descriptions for different sections.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bozorgi Group</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Bozorgi Group | Global Wood, Property & IT Consultants</title>
+    <meta name="title" content="Bozorgi Group | Global Wood, Property & IT Consultants" />
+    <meta name="description" content="Bozorgi Group specializes in global wood sourcing, expert property consulting, and AI-driven IT automation solutions. Business without boundaries." />
+    <meta name="keywords" content="Bozorgi Group, Wood Consulting, Property Investment, IT Solutions, AI Automation, Building Materials" />
+    <meta name="author" content="Bozorgi Group" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bozorgigroup.com/" />
+    <meta property="og:title" content="Bozorgi Group | Global Wood, Property & IT Consultants" />
+    <meta property="og:description" content="Specialized in building materials, real estate consulting, and digital transformation." />
+    <meta property="og:image" content="https://bozorgigroup.com/img/bozorgi-group-trading.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bozorgigroup.com/" />
+    <meta property="twitter:title" content="Bozorgi Group | Global Wood, Property & IT Consultants" />
+    <meta property="twitter:description" content="Specialized in building materials, real estate consulting, and digital transformation." />
+    <meta property="twitter:image" content="https://bozorgigroup.com/img/bozorgi-group-trading.jpg" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
