feat: Update image and URL paths to CDN
Migrates all image and meta tag URLs from the main domain to the CDN. This change optimizes asset loading and improves website performance.

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="https://bozorgigroup.com/" />
     <meta property="og:title" content="Bozorgi Group | Global Wood, Property & IT Consultants" />
     <meta property="og:description" content="Specialized in building materials, real estate consulting, and digital transformation." />
-    <meta property="og:image" content="https://bozorgigroup.com/img/bozorgi-group-trading.jpg" />
+    <meta property="og:image" content="https://cdn.bozorgigroup.com/img/bozorgi-group-trading.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://bozorgigroup.com/" />
     <meta property="twitter:title" content="Bozorgi Group | Global Wood, Property & IT Consultants" />
     <meta property="twitter:description" content="Specialized in building materials, real estate consulting, and digital transformation." />
-    <meta property="twitter:image" content="https://bozorgigroup.com/images/bozorgi-group-trading.jpg" />
+    <meta property="twitter:image" content="https://cdn.bozorgigroup.com/img/bozorgi-group-trading.jpg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
